Fixed parallex images on mobile

--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -26,6 +26,10 @@
         background-position: center;
         z-index: -1;
         filter: brightness(35%);
+
+        @include mobile {
+            background-attachment: scroll;
+        }
     }
 
     .home-text {
